--- a/webroot/estilosEjercicios.css
+++ b/webroot/estilosEjercicios.css
@@ -14,12 +14,31 @@
 a{
     text-decoration: none;
 }
-h1{
-    text-align: center;
-    color: var(--color5);
-    background-color: var(--color4);
-    border-radius: 50px;
-    border: 2.5px solid var(--color6);
+body{
+    header{
+        h1{
+            text-align: center;
+            color: var(--color5);
+            background-color: var(--color4);
+            border-radius: 50px;
+            border: 2.5px solid var(--color6);
+        }
+    }
+    footer{
+        background-color: white;
+        background-attachment: scroll;
+        border-radius: 10px;
+        border: 2.5px solid var(--color5);
+        display: flex;
+        justify-content: space-evenly;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        a:link, a:visited, a:hover, a:active{
+            color: var(--color3);
+        }
+    }
+    
 }
 a:link, a:visited, a:hover, a:active{
     color: var(--color3);
