--- a/webroot/estilosEjercicios.css
+++ b/webroot/estilosEjercicios.css
@@ -11,7 +11,8 @@
     margin: 5px;
     padding: 0px;
 }
-a{
+a:link, a:visited, a:hover, a:active{
+    color: var(--color3);
     text-decoration: none;
 }
 body{
@@ -24,6 +25,11 @@ body{
             border: 2.5px solid var(--color6);
         }
     }
+    main{
+        code *{
+            margin: 0;
+        }
+    }
     footer{
         background-color: white;
         background-attachment: scroll;
@@ -34,47 +40,8 @@ body{
         position: fixed;
         bottom: 0;
         width: 100%;
-        a:link, a:visited, a:hover, a:active{
+        p{
             color: var(--color3);
         }
     }
-    
-}
-a:link, a:visited, a:hover, a:active{
-    color: var(--color3);
-}
-.obligatorio{
-    background-color: #ffff99;
-}
-.opcional{
-    background-color: #ffffff;
-}
-.invariable{
-    background-color: #e6e6e6;
-}
-.error{
-    color: #ff0000;
-}
-code *{
-    margin: 0;
-}
-table{
-    display: table;
-    table-layout: fixed;
-    textarea{
-        margin: auto;
-        width: 95%;
-        height: 50px
-    }
-}
-footer{
-    background-color: white;
-    background-attachment: scroll;
-    border-radius: 10px;
-    border: 2.5px solid var(--color5);
-    display: flex;
-    justify-content: space-evenly;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
